--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,15 @@
             <artifactId>thymeleaf-layout-dialect</artifactId>
             <version>2.5.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>1.3.1.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
